catkin_ws/logs/iq_gnc/build.make.279.log.stderr
In file included from /opt/ros/noetic/include/ros/ros.h:40,
                 from /home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:10,
                 from /home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:3:
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp: In function ‘void drone1_gpsSub_cb(const ConstPtr&)’:
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:190:12: warning: format ‘%f’ expects argument of type ‘double’, but argument 11 has type ‘const _stamp_type’ {aka ‘const ros::Time’} [-Wformat=]
  190 |   ROS_INFO("Got global position: [%.2f, %.2f, %.2f , %f]", msg->latitude, msg->longitude, msg->altitude, msg->header.stamp);
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~                                                ~~~~~~~~~~~~~~~~~
      |                                                                                                                      |
      |                                                                                                                      const _stamp_type {aka const ros::Time}
/opt/ros/noetic/include/ros/console.h:351:165: note: in definition of macro ‘ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER’
  351 |     ::ros::console::print(filter, __rosconsole_define_location__loc.logger_, __rosconsole_define_location__loc.level_, __FILE__, __LINE__, __ROSCONSOLE_FUNCTION__, __VA_ARGS__)
      |                                                                                                                                                                     ^~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:390:7: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION’
  390 |       ROSCONSOLE_PRINT_AT_LOCATION(__VA_ARGS__); \
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:575:35: note: in expansion of macro ‘ROS_LOG_COND’
  575 | #define ROS_LOG(level, name, ...) ROS_LOG_COND(true, level, name, __VA_ARGS__)
      |                                   ^~~~~~~~~~~~
/opt/ros/noetic/include/rosconsole/macros_generated.h:110:23: note: in expansion of macro ‘ROS_LOG’
  110 | #define ROS_INFO(...) ROS_LOG(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, __VA_ARGS__)
      |                       ^~~~~~~
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:190:3: note: in expansion of macro ‘ROS_INFO’
  190 |   ROS_INFO("Got global position: [%.2f, %.2f, %.2f , %f]", msg->latitude, msg->longitude, msg->altitude, msg->header.stamp);
      |   ^~~~~~~~
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:190:55: note: format string is defined here
  190 |   ROS_INFO("Got global position: [%.2f, %.2f, %.2f , %f]", msg->latitude, msg->longitude, msg->altitude, msg->header.stamp);
      |                                                      ~^
      |                                                       |
      |                                                       double
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:201:29: error: no match for ‘operator=’ (operand types are ‘std_msgs::Header_<std::allocator<void> >::_stamp_type’ {aka ‘ros::Time’} and ‘time_t(time_t*) throw ()’ {aka ‘long int(long int*)’})
  201 |   curr_gps_g.header.stamp = time;
      |                             ^~~~
In file included from /opt/ros/noetic/include/ros/serialization.h:34,
                 from /home/mario/catkin_ws/devel/include/mavros_msgs/CommandTOLRequest.h:14,
                 from /home/mario/catkin_ws/devel/include/mavros_msgs/CommandTOL.h:11,
                 from /home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:1,
                 from /home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:3:
/opt/ros/noetic/include/ros/time.h:170:22: note: candidate: ‘constexpr ros::Time& ros::Time::operator=(const ros::Time&)’
  170 |   class ROSTIME_DECL Time : public TimeBase<Time, Duration>
      |                      ^~~~
/opt/ros/noetic/include/ros/time.h:170:22: note:   no known conversion for argument 1 from ‘time_t(time_t*) throw ()’ {aka ‘long int(long int*)’} to ‘const ros::Time&’
/opt/ros/noetic/include/ros/time.h:170:22: note: candidate: ‘constexpr ros::Time& ros::Time::operator=(ros::Time&&)’
/opt/ros/noetic/include/ros/time.h:170:22: note:   no known conversion for argument 1 from ‘time_t(time_t*) throw ()’ {aka ‘long int(long int*)’} to ‘ros::Time&&’
make[2]: *** [CMakeFiles/follower_sub.dir/build.make:63: CMakeFiles/follower_sub.dir/src/follower_sub.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1891: CMakeFiles/follower_sub.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
